infra/deploy/rhos/manifests/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: love-db
  labels:
    app: love-stack
    component: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: love-stack
    component: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: love-db
  labels:
    app: love-stack
    component: database
spec:
  selector:
    matchLabels:
      app: love-stack
      component: database
  template:
    metadata:
      labels:
        app: love-stack
        component: database
    spec:
      containers:
        - name: postgres
          image: quay.io/sclorg/postgresql-15-c9s
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: love-db-pvc
