infra/deploy/rhos/manifests/experience.yaml
apiVersion: v1
kind: Service
metadata:
  name: love-experience
  labels:
    app: love-stack
    component: experience
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: love-stack
    component: experience
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: love-experience
  labels:
    app: love-stack
    component: experience
spec:
  to:
    kind: Service
    name: love-experience
  port:
    targetPort: 3000
  tls:
    termination: edge
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: love-experience
  labels:
    app: love-stack
    component: experience
spec:
  replicas: 1
  selector:
    matchLabels:
      app: love-stack
      component: experience
  template:
    metadata:
      labels:
        app: love-stack
        component: experience
    spec:
      containers:
        - name: experience
          image: love-experience:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
